Add a friendOrFoeChallenge